# polychromatic

./: .directory  .gitignore  CHANGELOG  DEVELOPMENT.md  INSTALL  Makefile  README.md  controller.py  meson.build  meson_options.txt  polychromatic-cli  polychromatic-cmd  polychromatic-controller  polychromatic-controller-dev  polychromatic-helper  polychromatic-tray-applet  polychromatic-tray-qt  requirements.in  requirements.txt  tray_applet.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 00-app-bug.yml  bugs.md  config.yml
.github/workflows/: main.yml  unit_test.yml
.readme/: Screenshots.md
data/: chroma_menu.html  chroma_preferences.html  chroma_profiles.html  controller.css  controller_devices.html  controller_service_error.html  devices.html  error.html  license.txt  menu.html  preferences.html  profile_editor.html
data/devicemaps/: blackwidow_elite_m_keys.json  blackwidow_m_keys.json  cynosa_v2_en_US.json  cynosa_v2_nordic.json  huntsman_mini_en_US.json  huntsman_te_en_US.json  huntsman_v2_analog_en_GB.json  mambaelite.json  maps.json  ornata_v2_us.json
data/devices/: openrazer.json
data/img/: device-images.json
data/js/: chroma_menu.js  devices.js  global.js  main_menu.js  preferences.js  profile_editor.js
data/licenses/: GPLv2.txt  app.md  app.txt
data/pages/: controller.css  controller.html  controller.js  demo.html  error.html  global.js  loading.html  menu.html  menu.js  preferences.html  preferences.js  profile_editor.html  profile_editor.js
data/qt/: about.ui  colour-picker.ui  custom-dpi.ui  device-info.ui  dpi-control.ui  editor.html  editor.ui  effect-metadata-editor.ui  icon-picker.ui  inspect-matrix.ui  loading.ui  main.ui  new-effect.ui  openrazer-config.ui  preferences.ui  procviewer.ui  style.qss  troubleshooter.ui  widget-summary.ui
data/tray/: icons.json
data/ui/: colour-picker.js  controller.html  controller.js  controls.js  devices.js  dialog.js  effects.js  icon-picker.js  main.js  main.ui  preferences.js  troubleshooter.ui
debian/: changelog  control  copyright  polychromatic-cli.install  polychromatic-common.install  polychromatic-controller.install  polychromatic-qt.install  polychromatic-tray-applet.install  polychromatic.install  postinst  postrm  rules
debian/missing-sources/: html5kellycolorpicker.js
docs/: colours.example.json  devicestate.example.json  preferences.example.json
docs/known_capabilities/: blackwidow-chroma-v2.json  blade_stealth.json  bw_chroma.json  bw_classic.json  bw_ultimate2016.json  da-elite.json  firefly.json  mamba_te.json  naga_2014.json  tapian.json  tartarus.json
docs/known_matrixes/: blackwidow-chroma-UK.txt  blackwidow-ultimate-2016-UK.txt  blade-stealth-french-azerty.txt  firefly.txt  mamba-te.txt
install/: install.sh  polychromatic-controller.desktop  polychromatic-tray-applet.desktop  polychromatic-tray.desktop  uninstall.sh  update.sh
locale/: LINGUAS  de.po  de_DE.po  en_GB.po  en_US.po  fi_FI.po  fr_FR.po  ka.po  nl.po  pl_PL.po  polychromatic-common.pot  polychromatic-controller.pot  polychromatic-tray-applet.pot  polychromatic.pot  pt_BR.po  zh_CN.po
locale/de_DE/: polychromatic-tray-applet.po
locale/en_GB/: polychromatic-common.po  polychromatic-controller.po
locale/ru/: polychromatic-common.po  polychromatic-controller.po  polychromatic-tray-applet.po
man/: polychromatic-cli.1  polychromatic-cli.1.scd  polychromatic-controller.1  polychromatic-controller.1.scd  polychromatic-helper.1  polychromatic-helper.1.scd  polychromatic-tray-applet.1  polychromatic-tray-applet.1.scd
polychromatic/: base.py  bulkapply.py  common.py  effects.py  fileman.py  fx.py  locales.py  middleman.py  paths.py  preferences.py  procpid.py
polychromatic/backends/: _backend.py  openrazer.py
polychromatic/controller/: __init__.py  devices.py  editor.py  effects.py  menubar.py  preferences.py  presets.py  procviewer.py  shared.py  triggers.py  troubleshooter.py
polychromatic/qt/: flowlayout.py
polychromatic/troubleshoot/: openrazer.py
pylib/: common.py  controller.py  demo.py  devices.py  effects.py  fileman.py  fx.py  locales.py  middleman.py  preferences.py  procpid.py  profiles.py  uicallback.py
pylib/backends/: _backend.py  middleman.py  openrazer.py  openrazer_troubleshooter.py
pylib/controller/: __init__.py  devices.py  editor.py  effects.py  menubar.py  preferences.py  presets.py  procviewer.py  shared.py  triggers.py  troubleshooter.py
pylib/qt/: flowlayout.py
pylib/screens/: __init__.py  error.py  loading.py  main.py
pylib/troubleshoot/: openrazer.py
scripts/: build-locales-for-testing.sh  build-locales.sh  build-man-pages.sh  build-styles.sh  create-files-for-opt.sh  create-locales.sh  generate-pots.sh  run-unit-test.sh  run-unit-tests.sh  run-validate-tests.sh  validate-json.py  validate-metainfo.sh  validate-py.sh  validate-qss.py  validate-scdoc.sh  validate-scss.sh
scripts/dev/: i18n-stats.py  optimise-svgs.sh  update-requirements.sh
scripts/inspecting/: step-through-matrix.py
scripts/openrazer/: spawn-fake-devices.sh  step-through-matrix.py  update-device-list.sh
scripts/packaging/: ci-create-artifact.sh  generate-edge-debian-changelog.py  prepare-edge-ppa.sh  prepare-preview-ppa.sh  push-stable.sh
scripts/razer/: set_brightness.py  set_effect.py  set_game_mode.py  set_macro.py  set_profile.py  set_profile_by_parameter.py
source/: build-sass.sh  watch-sass.sh
source/data/: controller.less
source/error/: generic.xcf  nodevice.xcf
source/header/: generic.xcf  header.xcf  keyboard.xcf  mouse.xcf  mousemat.xcf
source/launchers/: polychromatic-controller.desktop  polychromatic.desktop  (+1 more)
sources/: app.polychromatic.controller.metainfo.xml  requirements.txt
tests/: 10_internals.py  11_effects.py  12_fx.py  20_openrazer.py  20_openrazer_daemon.sh  21_openrazer.py  _backends.py  _dummy.py  effects.py  fx.py  internals.py  middleman.py  run.sh  runner.py  validate-js.json  validate-js.sh  validate-py.sh  validate-scdoc.sh  validate-scss.sh
tools/: build-less.sh  build-sass.sh  generate-pots.sh  step-through-matrix.py  svg_editor.py
(+112 files in other folders)
